--- a/content.html
+++ b/content.html
@@ -75,6 +75,41 @@
                 </div>
             </div>
         </section>
+
+        <section class="attractions">
+            <h1>Descubra novos universos</h1>
+            <div class="images-attractions1">
+                <img src="./assets/hbo-default_0.webp" alt="" id="content-images">
+                <img src="./assets/MAX-Default.webp" alt="" id="content-images">
+                <img src="./assets/DC_Default.webp" alt="" id="content-images">
+            </div>
+            <div class="images-attractions2">
+                <img src="./assets/WB-Default.webp" alt="" id="content-images">
+                <img src="./assets/CN-Default.webp" alt="" id="content-images">
+                <img src="./assets/UCL-Default.webp" alt="" id="content-images">
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="links">
+            <ul>
+                <li><a href=""></a>Agora na HBO MAX</li>
+                <li><a href=""></a>Em breve</li>
+                <li><a href=""></a>Filme em destaque</li>
+                <li><a href=""></a>Séries</li>
+                <li><a href=""></a>Ajuda</li>
+            </ul>
+        </div>
+        <p>© 2023 WarnerMedia Direct Latin America, LLC. Todos os direitos reservados. HBO Max é usado sob licença.</p>
+        <div class="social-medias">
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
