alinhando elementos footer

--- a/content.html
+++ b/content.html
@@ -106,8 +106,8 @@
         <div class="social-medias">
             <ul>
                 <li><a href=""><i class="bi bi-facebook"></i></a></li>
-                <li><a href=""><i class="bi bi-twitter"></i></a></li>
-                <li><a href=""><i class="bi bi-instagram"></i></a></li>
+                <li><a href="https://twitter.com/HBOMaxBR?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="bi bi-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/hbomaxbr/" target="_blank"><i class="bi bi-instagram"></i></a></li>
                 <li><a href=""><i class="bi bi-youtube"></i></a></li>
             </ul>
         </div>
