adicionando redes sociais

--- a/content.html
+++ b/content.html
@@ -105,10 +105,10 @@
         <p>© 2023 WarnerMedia Direct Latin America, LLC. Todos os direitos reservados. HBO Max é usado sob licença.</p>
         <div class="social-medias">
             <ul>
-                <li><a href=""><i class="bi bi-facebook"></i></a></li>
+                <li><a href="https://pt-br.facebook.com/HBOBR/"><i class="bi bi-facebook"></i></a></li>
                 <li><a href="https://twitter.com/HBOMaxBR?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="bi bi-twitter"></i></a></li>
                 <li><a href="https://www.instagram.com/hbomaxbr/" target="_blank"><i class="bi bi-instagram"></i></a></li>
-                <li><a href=""><i class="bi bi-youtube"></i></a></li>
+                <li><a href="https://www.youtube.com/c/hbomaxbr"><i class="bi bi-youtube"></i></a></li>
             </ul>
         </div>
     </footer>
