adicionando alternâncias entre as imagens

--- a/content.html
+++ b/content.html
@@ -80,14 +80,20 @@
         <section class="attractions">
             <h1>Descubra novos universos</h1>
             <div class="images-attractions1">
-                <img src="./assets/hbo-default_0.webp" alt="" id="content-images">
-                <img src="./assets/MAX-Default.webp" alt="" id="content-images">
-                <img src="./assets/DC_Default.webp" alt="" id="content-images">
+                <img src="./assets/hbo-default_0.webp" alt="" id="content-images" class="image1">
+                <img src="./assets/hbo-hover_0.webp" alt="" id="content-images" class="image1hover">
+                <img src="./assets/MAX-Default.webp" alt="" id="content-images" class="image2">
+                <img src="./assets/MAX-Hover.webp" alt="" id="content-images" class="image2hover">
+                <img src="./assets/DC_Default.webp" alt="" id="content-images" class="image3">
+                <img src="./assets/DC-Hover.webp" alt="" id="content-images" class="image3hover">
             </div>
             <div class="images-attractions2">
-                <img src="./assets/WB-Default.webp" alt="" id="content-images">
-                <img src="./assets/CN-Default.webp" alt="" id="content-images">
-                <img src="./assets/UCL-Default.webp" alt="" id="content-images">
+                <img src="./assets/WB-Default.webp" alt="" id="content-images" class="image4">
+                <img src="./assets/WB-Hover.webp" alt="" id="content-images" class="image4hover">
+                <img src="./assets/CN-Default.webp" alt="" id="content-images" class="image5">
+                <img src="./assets/CN-Hover.png" alt="" id="content-images" class="image5hover">
+                <img src="./assets/UCL-Default.webp" alt="" id="content-images" class="image6">
+                <img src="./assets/UCL-Hover.webp" alt="" id="content-images" class="image6hover">
             </div>
         </section>
     </main>
