Organizando animações hover

--- a/content.html
+++ b/content.html
@@ -58,7 +58,7 @@
                             <li>Baixe suas séries e filmes favoritos, assista onde e quando quiser.</li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="prices2">
                         <div class="allscreen">
                             <div class="allscreen-price">
                                 <h3>Multitelas</h3>
