--- a/teste.html
+++ b/teste.html
@@ -5,38 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="teste.css">
+</style>
 </head>
 <body>
-  <div class="prices-card">
-    <div class="card">
-        <div class="mobile-price">
-            <h3>Mobile</h3>
-            <p><span>R$ 19,90</span> /mês</p>
-        </div>
-        <ul>
-            <li>Aproveite em smartphones e tablets, onde quiser.</li>
-            <li>Assista em 1 tela por vez.</li>
-            <li>Tenha conteúdo em resolução adaptada para cada dispositivo.</li>
-            <li>Baixe suas séries e filmes favoritos, assista onde e quando quiser.</li>
-        </ul>
-    </div>
-    <div>
-        <div class="card2">
-            <div class="allscreen-price">
-                <h3>Multitelas</h3>
-                <p><span>R$ 27,90</span> /mês</p>
-            </div>
-            <ul>
-                <li>Aproveite em todos os seus dispositivos.</li>
-                <li>Chromecast e Airplay disponíveis.</li>
-                <li>Assista em até 3 telas ao mesmo tempo.</li>
-                <li>Tenha conteúdo em alta definição, com qualidade 4K.</li>
-                <li>Baixe suas séries e filmes favoritos, assista onde e quando quiser.</li>
-                <li>Crie até 5 perfis diferentes.</li>
-            </ul>
-    </div>
-</div>
-</div>
+    <div id="div1">
+        <h1>Texto Aleatório 1</h1>
+      </div>
+      <div id="div2">
+        <h1>Texto Aleatório 2</h1>
+      </div>
+      
+      <style>
+      #div1:hover ~ #div2 h1 {
+          color: blue;
+      }
+      
+      #div2:hover ~ #div1 h1 {
+          color: red;
+      }
+      </style>
 </body>
 </html>
