--- a/teste.html
+++ b/teste.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</style>
+    <style>
+        /* Estilo para o botão */
+        #rotateBtn {
+            animation: rotate 0.5s linear infinite;
+        }
+        /* Define a animação de rotação */
+        @keyframes rotate {
+            0% {
+                transform: rotate(-10deg);
+            }
+            25% {
+                transform: rotate(10deg);
+            }
+            50% {
+                transform: rotate(-10deg);
+            }
+            75% {
+                transform: rotate(10deg);
+            }
+            100% {
+                transform: rotate(-10deg);
+                animation-delay: 4000000000s;
+                animation-play-state: paused;
+            }
+        }
+    </style>
 </head>
+
 <body>
-    <div id="div1">
-        <h1>Texto Aleatório 1</h1>
-      </div>
-      <div id="div2">
-        <h1>Texto Aleatório 2</h1>
-      </div>
-      
-      <style>
-      #div1:hover ~ #div2 h1 {
-          color: blue;
-      }
-      
-      #div2:hover ~ #div1 h1 {
-          color: red;
-      }
-      </style>
+    <button id="rotateBtn">Rotate</button>
 </body>
+
 </html>
